--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier:fix": "pnpm prettier --write",
     "format": "pnpm prettier:fix && pnpm lint:fix",
     "check-types": "tsc --noEmit --pretty",
-    "commit": "cz"
+    "commit": "cz",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,8 +23,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vitejs/plugin-react": "^3.0.0",
@@ -39,11 +43,13 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-simple-import-sort": "^9.0.0",
     "husky": "^8.0.3",
+    "jsdom": "^21.0.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite-tsconfig-paths": "^4.0.5",
+    "vitest": "^0.27.3"
   },
   "config": {
     "commitizen": {
