--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.32.0",
@@ -42,10 +43,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-simple-import-sort": "^9.0.0",
+    "eslint-plugin-tailwindcss": "^3.8.0",
     "husky": "^8.0.3",
     "jsdom": "^21.0.0",
     "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.5",
