--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "pnpm prettier:fix && pnpm lint:fix",
     "check-types": "tsc --noEmit --pretty",
     "commit": "cz",
+    "cm": "pnpm commit",
     "test": "vitest"
   },
   "dependencies": {
