--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "react",
     "@typescript-eslint",
     "prettier",
+    "unused-imports",
     "simple-import-sort",
     "testing-library",
     "jest-dom",
@@ -33,8 +34,22 @@
   "rules": {
     "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off", // Named export is easier to refactor automatically
+    // Remove unused imports
+    "no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    // Sort imports
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
+    // Testing
     "testing-library/await-async-query": "error",
     "testing-library/no-await-sync-query": "error",
     "testing-library/no-debugging-utils": "warn",
