--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "eslint-plugin-unused-imports": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0"
