chore(eslint): set config filename for tailwindcss inside shared settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -62,6 +62,9 @@
   "settings": {
     "import/resolver": {
       "typescript": {} // this loads <rootdir>/tsconfig.json to eslint
+    },
+    "tailwindcss": {
+      "config": "tailwind.config.cjs"
     }
   }
 }
