--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.5.10",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@tanstack/react-query": "^4.22.3",
+    "@tanstack/react-query-devtools": "^4.22.3",
+    "@tanstack/react-table": "^8.7.6",
+    "axios": "^1.2.3",
+    "chroma-js": "^2.4.2",
+    "clsx": "^1.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/chroma-js": "^2.1.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
